--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "db:view-resources": "ts-node scripts/view-resources.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.65.0",
+    "@langchain/community": "^0.3.57",
+    "@langchain/textsplitters": "^0.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
@@ -32,8 +35,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^17.2.3",
+    "langchain": "^0.3.35",
     "mongodb": "^6.20.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^6.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
